--- a/neovim.css
+++ b/neovim.css
@@ -9,49 +9,49 @@
 */
 
 :root {
-	/* regular */
-	--hljs-black: #565f89;
-	--hljs-red: #8c4351;
-	--hljs-green: #33635c;
-	--hljs-yellow: #965027;
-	--hljs-blue: #0f4b6e;
-	--hljs-purple: #5a4a78;
-	--hljs-cyan: #166775;
-	--hljs-white: #565a6e;
+  /* regular */
+  --hljs-black: #565f89;
+  --hljs-red: #8c4351;
+  --hljs-green: #33635c;
+  --hljs-yellow: #965027;
+  --hljs-blue: #0f4b6e;
+  --hljs-purple: #5a4a78;
+  --hljs-cyan: #166775;
+  --hljs-white: #565a6e;
 
-	/* bright */
-	--hljs-b-black: #565f89;
-	--hljs-b-red: #8c4351;
-	--hljs-b-green: #485e30;
-	--hljs-b-yellow: #8f5e15;
-	--hljs-b-blue: #34548a;
-	--hljs-b-purple: #5a4a78;
-	--hljs-b-cyan: #166775;
-	--hljs-b-white: #343b58;
+  /* bright */
+  --hljs-b-black: #565f89;
+  --hljs-b-red: #8c4351;
+  --hljs-b-green: #485e30;
+  --hljs-b-yellow: #8f5e15;
+  --hljs-b-blue: #34548a;
+  --hljs-b-purple: #5a4a78;
+  --hljs-b-cyan: #166775;
+  --hljs-b-white: #343b58;
 }
 
-@media (prefers-color-scheme:dark) {
-	:root {
-		/* regular */
-		--hljs-black: #565f89;
-		--hljs-red: #f7768e;
-		--hljs-green: #73daca;
-		--hljs-yellow: #e18e11;
-		--hljs-blue: #7aa2f7;
-		--hljs-purple: #bb9af7;
-		--hljs-cyan: #2ac3de;
-		--hljs-white: #9aa5ce;
+@media (prefers-color-scheme: dark) {
+  :root {
+    /* regular */
+    --hljs-black: #565f89;
+    --hljs-red: #f7768e;
+    --hljs-green: #73daca;
+    --hljs-yellow: #e18e11;
+    --hljs-blue: #7aa2f7;
+    --hljs-purple: #bb9af7;
+    --hljs-cyan: #2ac3de;
+    --hljs-white: #9aa5ce;
 
-		/* bright */
-		--hljs-b-black: #565f89;
-		--hljs-b-red: #f7768e;
-		--hljs-b-green: #9ece6a;
-		--hljs-b-yellow: #ff9e64;
-		--hljs-b-blue: #7aa2f7;
-		--hljs-b-purple: #bb9af7;
-		--hljs-b-cyan: #2ac3de;
-		--hljs-b-white: #c0caf5;
-	}
+    /* bright */
+    --hljs-b-black: #565f89;
+    --hljs-b-red: #f7768e;
+    --hljs-b-green: #9ece6a;
+    --hljs-b-yellow: #ff9e64;
+    --hljs-b-blue: #7aa2f7;
+    --hljs-b-purple: #bb9af7;
+    --hljs-b-cyan: #2ac3de;
+    --hljs-b-white: #c0caf5;
+  }
 }
 
 /*  Comment */
@@ -87,10 +87,9 @@
   color: var(--hljs-yellow);
 }
 
-
 /*  Yellow */
 /* INFO:  	Function parameters, Regex character sets, Terminal Yellow */
-.hljs-built_in, 
+.hljs-built_in,
 .hljs-attribute {
   color: var(--hljs-b-yellow);
 }
@@ -103,19 +102,20 @@
 /* light blue */
 /* INFO: Object properties, Regex quantifiers and flags, Markdown headings, Terminal Cyan, Markdown code, Import/export keywords */
 .hljs-keyword,
-  .hljs-title.function_,
+.hljs-title.function_,
 .hljs-title,
 .hljs-title.class_,
 .hljs-title.class_.inherited__,
 .hljs-subst,
 .hljs-property {
-	color: var(--hljs-blue);
+  color: var(--hljs-blue);
 }
 
 /*Green*/
 /* INFO: Object literal keys, Markdown links, Terminal Green */
-.hljs-selector-tag { color: var(--hljs-green);}
-
+.hljs-selector-tag {
+  color: var(--hljs-green);
+}
 
 /*Green(er) */
 /* INFO: Strings, CSS class names */
@@ -135,8 +135,6 @@
   color: var(--hljs-blue);
 }
 
-
-
 /* Magenta */
 /*INFO: Control Keywords, Storage Types, Regex symbols and operators, HTML Attributes, Terminal Magenta */
 .hljs-name,
@@ -151,19 +149,19 @@
 /* white*/
 /* INFO: Variables, Class names, Terminal White */
 .hljs-punctuation {
-	color: var(--hljs-b-white);
+  color: var(--hljs-b-white);
 }
 
 .hljs {
-	background: #d5d6db;
-	color: #565a6e;
+  background: #d5d6db;
+  color: #565a6e;
 }
 
 @media (prefers-color-scheme: dark) {
-	.hljs {
-		background: #1a1b26;
-		color: var(--hljs-b-white);
-	}
+  .hljs {
+    background: #1a1b26;
+    color: var(--hljs-b-white);
+  }
 }
 
 .hljs-emphasis {
